--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,13 @@
 .read-the-docs {
   color: #888;
 }
+
+.dist--title {
+
+  margin-bottom: 30px;
+}
+.time--quick {
+  display: flex;
+  gap:20px;
+  margin-top: 10px;
+}
